商品详情页 、商品评价页、用户地址页

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -55,7 +55,15 @@
             "urlCheck" : false
         },
         "usingComponents" : true,
-        "lazyCodeLoading": "requiredComponents"
+        "lazyCodeLoading": "requiredComponents",
+        "permission": {
+            "scope.userLocation": {
+                "desc": "提供服务"
+            }
+        },
+        "requiredPrivateInfos": [
+            "getLocation"
+        ]
     },
     "mp-alipay" : {
         "usingComponents" : true
